# glo4002-e2e-tester

./: .gitignore  README.md  pyproject.toml
src/glo4002_e2e_tester/: models.py  resources.py  tester.py  tests.py
